--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "echarts": "^3.8.5",
     "mint-ui": "^2.2.10",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
