--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.7",
+    "sass-resources-loader": "^1.3.3",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
