--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^3.5.2",
     "axios": "^0.17.1",
     "echarts": "^3.8.5",
+    "font-awesome": "^4.7.0",
     "mint-ui": "^2.2.10",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
