--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "font-awesome": "^4.7.0",
     "mint-ui": "^2.2.10",
     "vue": "^2.5.2",
+    "vue-calendar-component": "^2.6.0",
+    "vue-event-calendar": "^1.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
