--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "portfinder": "^1.0.13",
+    "postcss-loader": "^2.1.5",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "^1.3.3",
