--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.5.2",
     "vue-calendar-component": "^2.6.0",
     "vue-event-calendar": "^1.5.2",
+    "vue-html5-editor": "^1.1.1",
     "vue-i18n": "^7.8.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
